# chatbot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/dependencies/: auth.py  pagination.py
backend/app/api/middleware/: cors.py  rate_limit.py
backend/app/api/v1/: auth.py  chats.py  knowledge.py  providers.py  router.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/security/: jwt.py  password.py
backend/app/database/: base.py  session.py
backend/app/logging/: setup.py
backend/app/models/: __init__.py  audit.py  chat.py  knowledge.py  notification.py  organization.py  prompt.py  provider.py  role.py  settings.py  user.py  vector.py
backend/app/providers/ai/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  registry.py
backend/app/repositories/: base.py  chat.py  knowledge.py  provider.py  user.py
backend/app/schemas/: auth.py  chat.py  common.py  provider.py  rag.py
backend/app/services/: __init__.py  ai.py  auth.py  base.py  chat.py  provider.py  rag.py
backend/app/telemetry/: setup.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: test_api.py
backend/app/tests/unit/: test_auth.py  test_repositories.py  test_services.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: cleanup.py  embeddings.py  notifications.py
deployment/: nginx.conf
deployment/k8s/: backend-deployment.yaml  celery-deployment.yaml  configmap.yaml  frontend-deployment.yaml  secrets.yaml
docs/: api.md  architecture.md  deployment.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts
frontend/src/components/layouts/: chat-layout.tsx  index.ts  sidebar.tsx
frontend/src/components/ui/: input.tsx
frontend/src/features/chat/: chat-window.tsx  message-bubble.tsx  message-input.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: chat.tsx  login.tsx  settings.tsx
frontend/src/store/: auth.ts  chat.ts  theme.ts
frontend/src/types/: index.ts
