[project]
name = "chatbot-platform"
version = "1.0.0"
description = "Open-source AI chatbot platform"
requires-python = ">=3.12"
authors = [
    {name = "Chatbot Platform Team"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "websockets>=14.1",
    "sse-starlette>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "pydantic-extra-types>=2.10.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "openai>=1.55.0",
    "pillow>=11.1.0",
    "cryptography>=44.0.0",
    "pyyaml>=6.0.2",
    "orjson>=3.10.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
    "asgi-correlation-id>=4.3.0",
    "structlog>=25.1.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "faker>=33.0.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
    "pre-commit>=4.0.0",
]
ai = [
    "anthropic>=0.47.0",
    "google-generativeai>=0.8.0",
    "boto3>=1.36.0",
]
rag = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.3.0",
    "chromadb>=1.10.0",
    "qdrant-client>=1.13.0",
    "pymilvus>=2.5.0",
    "pgvector>=0.3.0",
]
all = [
    "chatbot-platform[dev,ai,rag]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ARG", "B", "C4", "ISC", "SIM", "TID"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["F821", "UP042"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
check_untyped_defs = false
disallow_untyped_decorators = false
disallow_subclassing_any = false
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["app.tests.*", "app.repositories.*", "app.services.*"]
# Pre-existing: SQLAlchemy stubs (bool vs ColumnElement), ServiceResult.ok() type mismatch
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.providers.ai.*", "app.workers.*", "app.logging.*"]
# Pre-existing: OpenAI/Anthropic/Celery SDK stub limitations, structlog type mismatch
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.models.*"]
# Pre-existing: SQLAlchemy relationship() forward references as strings
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.api.*"]
# Pre-existing: FastAPI decorators, route handler return type mismatches
ignore_errors = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
